<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/main_tab"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/main_tab_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_button0"
                style="@style/main_bottom_radio"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/function_selector"
                android:text="@string/main_function" />

            <ImageView
                style="@style/main_bottom_cutline"
                android:contentDescription="@null" />

            <RadioButton
                android:id="@+id/radio_button1"
                style="@style/main_bottom_radio"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/sign_selector"
                android:text="@string/main_sign" />

            <ImageView
                style="@style/main_bottom_cutline"
                android:contentDescription="@null" />

            <RadioButton
                android:id="@+id/radio_button2"
                style="@style/main_bottom_radio"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/myapp_selector"
                android:text="@string/main_myapp" />

            <ImageView
                style="@style/main_bottom_cutline"
                android:contentDescription="@null" />

            <RadioButton
                android:id="@+id/radio_button3"
                style="@style/main_bottom_radio"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/newmsg_selector"
                android:text="@string/main_newmsg" />
        </RadioGroup>
    </LinearLayout>

</TabHost>